- TODO: Rebuild MRU List after keys are removed
- TODO: Fix saveAsXml() to only store needed subkeys
- TODO: List Alternate startup folders if they are different in startup manager
- TODO: Check for missing DLLs that are ran by rundll32 and regsvr32
- TODO: Create full registry backup when LRC is ran for the first time
- TODO: Add quotes to file path if it has spaces

- Dialogs are opened with main dialog as owner
- Added Drivers Section
- Opens seperate dialog for scanning
- Prompts user to exit
- Scan dialog should completely load before scanning
- Now scans for missing ActiveX files
- Now uses SHGetSpecialFolderPath() API to get path to fonts folder
- No longer uses AddInvalidSubKey()
- Fixed the way registry data is stored
- Added toolbar with scan, fix and settings options
- Removed data column from listview
- Uses listview to store invalid registry keys and backs up checked keys with XML Registry
- Scans again once fix is clicked
- Added restore dialog and xml parser for treeview
- Error dialog to catch exceptions thrown by threads
- Most errors now are shown in error dialog
- Fixes all registry keys when there is an error
- Display error dialog only in debug mode
- Added notify icon to system tray
- Shows balloon tip when scanning is finished
- Added logger class to log actions to files
- Restore dialog now has listview that shows when file was created, also added option to delete file
- Main dialog can now be resized
- Changed layout of Options and Main dialog
- Program can now be started minimized
- Integrated new options into program
- The fix toolstrip menu item is now disabled after it is clicked
- Now uses the treeview to get the number of sections to scan
- Added restore icon to toolstrip menu
- Replaced Delete button with Open Directory in Restore dialog
- Restore dialog can now be resized
- Restore dialog now shows the size of the files
- Added ability to scan help files and windows sounds
- Changed about dialog layout