@@ -183,8 +183,8 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAlwSFlzAAALBwAA
-        CwcBtnMLwAAATFpJREFUeF7tnQd4VNXWhgcIJIAiIi0UAem9qVhABaX3KiBVLIAFlZZKDQkQeu8thd5b
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAlwSFlzAAALBAAA
+        CwQBG8oqrQAATFpJREFUeF7tnQd4VNXWhgcIJIAiIi0UAem9qVhABaX3KiBVLIAFlZZKDQkQeu8thd5b
         EgIKCohUkY6AFAEpogKitP2/32GOd+78aXgJ6r2ZPOuZyfQ53yrfKnufVMYYR8rlf/gISAFS5H/3GKSA
         /z9uAPEqQObMmR1/B/Hy8nKkS5fOkTFjRkeRIkUcxYsXd+TJk8dRsmRJR44cORy5c+d25MyZ01GwYEHr
         drZs2Ry5cuWy7vP29nYULVrUep2udX+hQoUcTz75pCNfvnzW++j5BQoU+OO1+v+xxx7TY1m4vwCf8QLv
